sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:4: error: '<-' expected but ')' found.
  for (i>- 0 to (getNombreValeurs()-2)) {
                                      ^AlgBubbleSort2:14: error: illegal start of simple expression
} 
^